# simple-epoll-web-server-cpp

./: .clang-format  .gitignore  .prettierrc  CMakeLists.txt  LICENSE  README.md
app/: entry.cpp  handlers.cpp  handlers.hpp  main.cpp
app/include/: handlers.hpp
assets/pages/: 404.html  405.html  features.html  index.html  site.webmanifest  usage.html
assets/public/: dynamic-route.html  index.html  intro.html  layout.html  routes.html
assets/public/pages/: 405.html  index.html
assets/public/static/: 404.html  405.html
assets/public/static/js/: main.js
assets/public/static/styles/: stylesheet.css
assets/styles/: stylesheet.css
docs/: project_layout.md
include/: app_entry.hpp  args.hpp  config.hpp.in  request.hpp  response.hpp  router.hpp  server.hpp  sews.hpp  signal.hpp  trie_node.hpp
include/architecture/connection/: manager.hpp
include/architecture/connection/transport/: plain_text_channel.hpp
include/architecture/telemetry/metric/: http_exporter.hpp  manager.hpp
include/core/connection/: event_types.hpp  manager.hpp
include/core/connection/event/: channel.hpp  write.hpp
include/core/connection/reactor/: acceptor.hpp  loop.hpp  loop_info.hpp
include/core/connection/transport/: buffered_channel.hpp  channel.hpp  event.hpp
include/core/message/: types.hpp
include/core/message/codec/: decoder.hpp  encoder.hpp
include/core/message/dispatch/: handler.hpp  router.hpp
include/core/message/transport/: message.hpp
include/core/message/type/: message.hpp
include/core/runtime/orchestrator/: dispatcher.hpp
include/core/telemetry/diagnostic/: log_types.hpp
include/core/telemetry/metric/: manager.hpp  types.hpp
include/infrastructure/bootstrap/: signal_handler.hpp  socket_factory.hpp
include/infrastructure/control/: stop_signal.hpp
include/sews/: app_entry.hpp  args.hpp  logger.hpp  request.hpp  response.hpp  router.hpp  server.hpp  sews.hpp  signal.hpp  trie_node.hpp
include/sews/bootstrap/: signal_handler.hpp  socket_factory.hpp
include/sews/core/: stop_flag.hpp
include/sews/core/enums/: log_type.hpp  message_type.hpp  metric_type.hpp  socket_event.hpp
include/sews/core/interface/: acceptor.hpp  channel.hpp  connection_manager.hpp  dispatcher.hpp  handler.hpp  logger.hpp  message.hpp  message_handler.hpp  metrics.hpp  request_parser.hpp  response_serializer.hpp  router.hpp  server.hpp  socket_event.hpp  socket_loop.hpp
include/sews/core/model/: socket_event.hpp
include/sews/infrastructure/connection/: manager.hpp
include/sews/infrastructure/transport/: plain_text_channel.hpp
include/sews/runtime/http/: http_dispatcher.hpp
include/sews/runtime/metrics/: http_exporter.hpp  manager.hpp
src/: args.cpp  logger.cpp  main.cpp  predefined_entry.cpp  request.cpp  response.cpp  router.cpp  server.cpp  sews.cpp  signal.cpp
src/architecture/connection/: manager.cpp
src/architecture/connection/transport/: plain_text_channel.cpp
src/architecture/runtime/http/: dispatcher.cpp  http_dispatcher.cpp
src/architecture/telemetry/diagnostic/: basic_logger.cpp
src/architecture/telemetry/metrics/: http_exporter.cpp  manager.cpp
src/bootstrap/: signal_handler.cpp  socket_factory.cpp
src/core/interface/: acceptor.cpp  channel.cpp  connection_manager.cpp  dispatcher.cpp  logger.cpp  message.cpp  message_handler.cpp  metrics.cpp  request_parser.cpp  response_serializer.cpp  router.cpp  server.cpp  socket_event.cpp  socket_loop.cpp
src/core/model/: socket_event.cpp
src/include/: sews.hpp
src/infrastructure/bootstrap/: signal_handler.cpp  socket_factory.cpp
src/infrastructure/connection/: manager.cpp
src/infrastructure/format/http/: handler_adapter.cpp  request.cpp  request_parser.cpp  response.cpp  response_serializer.cpp
src/infrastructure/io/epoll/: acceptor.cpp  socket_poll.cpp
src/infrastructure/io/logger/: basic_logger.cpp
src/infrastructure/runtime/http/: http_dispatcher.cpp
src/infrastructure/transport/: plain_text_channel.cpp
src/pages/: 404.html  405.html  features.html  index.html  knowhow.html  styles.css
src/runtime/http/: http_dispatcher.cpp
src/runtime/metrics/: http_exporter.cpp  manager.cpp
src/runtime/metrics/core/: manager.cpp
test/: CMakeLists.txt  test_sews.cpp
test/include/http/: test_handler.hpp
(+46 files in other folders)
